--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -425,9 +425,10 @@
             const card = $(`
                 <div class="grid-item">
                     <div class="card game-card box is-paddingless is-shadowless" onclick="showGameDetails('${game.id}')">
-                        <div class="card-image position-relative overflow-hidden" style="padding-top: 100%;">
-                            <figure class="image position-absolute" style="top: 0; left: 0; right: 0; bottom: 0; display: flex; align-items: center; justify-content: center; background: #f0f0f0;">
-                                <img src="${game.iconUrl || '/static/img/no-icon.png'}" alt="${game.name}" style="width: 100%; height: 100%; object-fit: cover;">
+                        <div class="card-image position-relative overflow-hidden" style="padding-top: 75%;">
+                            <figure class="image position-absolute" style="top: 0; left: 0; right: 0; bottom: 0; display: flex; align-items: center; justify-content: center; background: #222;">
+                                <img src="${game.bannerUrl || game.iconUrl || '/static/img/no-icon.png'}" alt="${game.name}" 
+                                     style="width: 100%; height: 100%; object-fit: cover;">
                             </figure>
                         </div>
                         <div class="card-content p-3" style="flex-grow: 1; display: flex; flex-direction: column;">
