--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -431,18 +431,19 @@
                             </figure>
                         </div>
                         <div class="card-content p-3">
-                            <div class="is-flex is-justify-content-between mb-2">
-                                <span class="tag is-white p-0 font-mono is-size-7 opacity-50">${game.id}</span>
-                                <span class="tag is-white p-0 font-mono is-size-7 opacity-50">v${game.display_version}</span>
+                            <div class="mb-2">
+                                <p class="is-size-7 font-mono opacity-40 mb-0">${game.id}</p>
                             </div>
+                            
                             <p class="is-size-6 has-text-weight-bold mb-3 truncate" title="${game.name}">${game.name}</p>
+                            
                             <div class="is-flex is-justify-content-between is-align-items-center">
                                 <div class="is-flex is-align-items-center gap-1">
                                     <span class="status-dot ${statusDotClass}"></span>
-                                    ${!game.has_latest_version && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.2rem; font-size: 0.65rem; font-weight: bold;">UPDATE</span>' : ''}
-                                    ${!game.has_all_dlcs && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.2rem; font-size: 0.65rem; font-weight: bold;">DLC</span>' : ''}
+                                    ${!game.has_latest_version && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.1rem; font-size: 0.6rem; font-weight: bold;">UPDATE</span>' : ''}
+                                    ${!game.has_all_dlcs && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.1rem; font-size: 0.6rem; font-weight: bold;">DLC</span>' : ''}
                                 </div>
-                                ${game.owned ? '<span class="tag is-success is-light is-small" style="font-weight: bold;"><i class="bi bi-check mr-1"></i>Possui</span>' : '<span class="tag is-grey-lighter has-text-grey is-small" style="font-weight: bold;"><i class="bi bi-x mr-1"></i>Vazio</span>'}
+                                <span class="tag is-white p-0 font-mono is-size-7 has-text-weight-bold has-text-primary">v${game.display_version}</span>
                             </div>
                         </div>
                     </div>
