--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -431,8 +431,9 @@
                             </figure>
                         </div>
                         <div class="card-content p-3">
-                            <div class="mb-2">
-                                <p class="is-size-7 font-mono opacity-40 mb-0">${game.id}</p>
+                            <div class="is-flex is-justify-content-between is-align-items-center mb-2">
+                                <span class="tag is-white p-0 font-mono is-size-7 opacity-40">${game.id}</span>
+                                <span class="tag is-white p-0 font-mono is-size-7 has-text-weight-bold has-text-primary">v${game.display_version}</span>
                             </div>
                             
                             <p class="is-size-6 has-text-weight-bold mb-3 truncate" title="${game.name}">${game.name}</p>
@@ -443,7 +444,6 @@
                                     ${!game.has_latest_version && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.1rem; font-size: 0.6rem; font-weight: bold;">UPDATE</span>' : ''}
                                     ${!game.has_all_dlcs && game.has_base ? '<span class="tag is-warning is-light is-small py-0 px-1" style="height: 1.1rem; font-size: 0.6rem; font-weight: bold;">DLC</span>' : ''}
                                 </div>
-                                <span class="tag is-white p-0 font-mono is-size-7 has-text-weight-bold has-text-primary">v${game.display_version}</span>
                             </div>
                         </div>
                     </div>
